WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141960
[GTK] Layout Test accessibility/roles-exposed.html is failing
https://bugs.webkit.org/show_bug.cgi?id=141960
Summary
[GTK] Layout Test accessibility/roles-exposed.html is failing
Marcos Chavarría Teijeiro (irc: chavaone)
Reported
2015-02-24 01:03:29 PST
The accessibility/roles-exposed.html layout test is failing since
r179922
(
https://trac.webkit.org/changeset/r179922
). This revision adds a default color chooser implementation so we probably need could update the expected file but I'm not sure. The diff is the following: --- /home/ch01/wk-tools/layout-test-results/accessibility/roles-exposed-expected.txt +++ /home/ch01/wk-tools/layout-test-results/accessibility/roles-exposed-actual.txt @@ -137,7 +137,7 @@ AXRole: AXButton input[type='color'] - AXRole: AXTextField + AXRole: AXColorWell input[type='checkbox'] AXRole: AXCheckBox
Attachments
Patch
(4.42 KB, patch)
2015-02-24 08:42 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.31 KB, patch)
2015-02-24 09:08 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-02-24 01:04:30 PST
<
rdar://problem/19934954
>
Radar WebKit Bug Importer
Comment 2
2015-02-24 01:05:05 PST
<
rdar://problem/19934955
>
Joanmarie Diggs
Comment 3
2015-02-24 06:10:34 PST
I'll take a look at this one. But my guess is that the role should be a push button if the widget is a push button
Joanmarie Diggs
Comment 4
2015-02-24 08:42:12 PST
Created
attachment 247235
[details]
Patch
Joanmarie Diggs
Comment 5
2015-02-24 08:52:06 PST
Andrzej: Just an FYI as you seem to be actively working in this area, but for EFL (right?). The EFL test expectations already have the mapping to ATK_ROLE_COLOR_CHOOSER. But as you'll see here [1], a color chooser is a dialog (i.e. the dialog that appears when you activate the button). I wasn't sure if that mapping was deliberate/desired for your port. As a related aside, we plan to add subrole support to ATK hopefully before too long to handle cases such as this (i.e. being able to say something is a specialized type of button, namely one that results in a color chooser appearing). [1]
https://developer.gnome.org/atk/unstable/AtkObject.html#AtkRole
Martin Robinson
Comment 6
2015-02-24 08:58:03 PST
Comment on
attachment 247235
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=247235&action=review
> Source/WebCore/accessibility/atk/WebKitAccessibleWrapperAtk.cpp:569 > + // ATK_ROLE_COLOR_CHOOSER is defined as a dialog (i.e. it's what appears when you push the button)
Nit: Missing a period at the end of this comment.
Joanmarie Diggs
Comment 7
2015-02-24 09:08:38 PST
Created
attachment 247236
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2015-02-24 09:20:17 PST
Comment on
attachment 247236
[details]
Patch for landing Clearing flags on attachment: 247236 Committed
r180566
: <
http://trac.webkit.org/changeset/180566
>
WebKit Commit Bot
Comment 9
2015-02-24 09:20:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug